--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,19 @@
 	"name": "YHack-2017",
 	"version": "1.0",
 
+	"background": {
+		"scripts": ["background.js"],
+		"persistent": false
+	},
 
-	"default_locale": "en",
 	"description": "Reading Fitness Extension",
 
 	"browser_action": {
 		"default_popup": "popup.html"
-	}
+	},
+
+	"permissions": [
+		"identity"
+	]
 
 }
